TG-792 fix(datagrid): fixed word overflow in cells

--- a/css/utils/_datagrid.scss
+++ b/css/utils/_datagrid.scss
@@ -30,6 +30,7 @@
 
       .datagrid-cell {
         min-width: $column-min-width;
+        overflow-wrap: break-word;
         &.actions, &.right {
           text-align: right;
         }
